bootstrap/battery-simulation/components/battery-simulator/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"StatefulSet","name":"mqtt-broker-ss"}]'
    app.openshift.io/route-disabled: 'false'
  name: battery-simulation
  labels:
    app: battery-simulation
    app.kubernetes.io/component: battery-simulation
    app.kubernetes.io/instance: battery-simulation
    app.kubernetes.io/name: battery-simulation
    app.kubernetes.io/part-of: battery-simulation
    app.openshift.io/runtime: quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: battery-simulation
  template:
    metadata:
      labels:
        app: battery-simulation
        deployment: battery-simulation
    spec:
      containers:
        - name: battery-simulation
          image: 'quay.io/oschneid/battery-simulator-jvm:agv-1.0'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
